# discord-bot

./: .all-contributorsrc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  pyproject.toml  requirements.in  requirements.txt
.github/ISSUE_TEMPLATE/: 01-bot-feature-suggestion.md  02-bug-report.md
.github/workflows/: build.yml  deploy.yml
src/spud/: test_urls.py  urls.py
